# stackdeck-windows-container

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT_PHASES.md  LICENSE  PLAN.md  README.md  SECURITY_REVIEW.md
crates/pystack-api/: Cargo.toml
crates/pystack-api/src/: lib.rs
crates/pystack-cli/: Cargo.toml
crates/pystack-cli/src/: main.rs
crates/pystack-compose/: Cargo.toml
crates/pystack-compose/src/: lib.rs
crates/pystack-desktop/: Cargo.toml
crates/pystack-desktop/src/: main.rs
crates/pystack-gui/: Cargo.toml
crates/pystack-gui/src/: lib.rs
crates/pystack-hyperv/: Cargo.toml
crates/pystack-hyperv/src/: lib.rs
crates/pystack-process/: Cargo.toml
crates/pystack-process/src/: lib.rs
crates/pystack-state/: Cargo.toml
crates/pystack-state/src/: lib.rs
crates/pystack-types/: Cargo.toml
crates/pystack-types/src/: lib.rs
desktop/stackdeck/: index.html  package-lock.json  package.json
desktop/stackdeck/scripts/: stage-hive.ps1
desktop/stackdeck/src/: main.tsx  styles.css
desktop/stackdeck/src-tauri/: Cargo.toml  tauri.conf.json
desktop/stackdeck/src-tauri/capabilities/: default.json
desktop/stackdeck/src-tauri/resources/installer/: Configure-StackDeckInstall.ps1
desktop/stackdeck/src-tauri/src/: main.rs
desktop/stackdeck/src-tauri/windows/: nsis-hooks.nsh
docs/: DOCKER_COMPATIBILITY_ROADMAP.md  LOCAL_DEPLOYMENT_WINDOWS.md  PRODUCTION_MVP_ARCHITECTURE.md
docs/proofs/: offline-gui-example-worker-2026-06-05.md
examples/smoke/: docker-compose.yml
scripts/windows/: 00-Ensure-Prereqs.ps1  01-Build-Release.ps1  02-Configure-HyperV.ps1  03-Init-HyperV-Runtime.ps1  04-Smoke-Test.ps1  05-Install-Api-Task.ps1  06-Diagnostics.ps1  07-Clean-Machine-Proof.ps1  Install-StackDeckMsi.ps1  Invoke-PyStackLocalDeploy.ps1
