[package]
name = "pystack-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Docker Engine API shim for PyStack Runner"

[dependencies]
pystack-types = { workspace = true }
pystack-hyperv = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
subtle = { workspace = true }
chrono = "0.4.45"

[dev-dependencies]
tower = "0.5"
