[package]
name = "pystack-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native desktop control plane for PyStack Runner"

[[bin]]
name = "pystack-desktop"
path = "src/main.rs"

[dependencies]
pystack-types = { workspace = true }
pystack-hyperv = { workspace = true }
pystack-compose = { workspace = true }
eframe = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
