[package]
name = "pystack-hyperv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hyper-V backend for PyStack Runner"

[dependencies]
pystack-types = { workspace = true }
pystack-compose = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
