[package]
name = "pystack-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Process lifecycle management for PyStack Runner"

[dependencies]
pystack-types = { workspace = true }
pystack-state = { workspace = true }
pystack-compose = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
native-tls = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
