[package]
name = "pystack-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared data types for PyStack Runner"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
