[package]
name = "stackdeck"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "StackDeck offline desktop control plane"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
pystack-types = { workspace = true }
pystack-compose = { workspace = true }
pystack-hyperv = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.33"
